--- a/media/main.css
+++ b/media/main.css
@@ -55,7 +55,7 @@ div.main {
 
 div.header, div.note {
     text-align: center;
-    background: #fff url('/media/compulogo.jpg') no-repeat left center;
+    background: #fff url('/media/logo.jpg') no-repeat left center;
     padding: 10px 0 10px 0;
 }
 
